Hid broken / resturbed / twilight spawners again.

--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -1325,6 +1325,7 @@ advanced {
         extracells:pattern.fluid:fluoronaquadriatic_acid;m=0
         extracells:pattern.fluid:petrotheum;m=0
         fluid:clean_molybdenite_slurry
+        enderio:item_broken_spawner
         fluid:potion.minecraft.strong_poison
         openblocks:tank:clean_stibnite_slurry;
         gas:pyrolusite_slurry
@@ -1575,6 +1576,7 @@ advanced {
         openblocks:tank:ec.internal.sulfuric_acid;
         extracells:pattern.fluid:ec.internal.clean_brown_limonite_slurry;m=0
         openblocks:tank:potion.minecraft.long_invisibility;
+        twilightforest:boss_spawner
         fluid:clean_calcite_slurry
         openblocks:tank:dimethylamine;
         extracells:pattern.fluid:ec.internal.water;m=0
@@ -3709,6 +3711,7 @@ advanced {
         extracells:pattern.fluid:yellow_limonite_slurry;m=0
         extracells:pattern.fluid:sodalite_slurry;m=0
         extracells:pattern.fluid:positive_matter;m=0
+        extrautils2:supermobspawner
         openblocks:tank:andradite_slurry;
         extracells:pattern.fluid:rp;m=0
         thermalexpansion:morb:twilightforest:hostile_wolf
