--- a/config/icbmclassic/main.cfg
+++ b/config/icbmclassic/main.cfg
@@ -1,10 +1,10 @@
 # Configuration file
 
 general {
-    # Limits the max tier the handheld launcher can fire,} outside of creative mode
+    # Limits the max tier the handheld launcher can fire, outside of creative mode
     # Min: 1
     # Max: 4
-    I:handheld_launcher_tier_limit=2
+    I:handheld_launcher_tier_limit=4
 
     # Range of tier 1 launcher
     B:use_energy=true
