Added some singularities
(and fixed a couple of their recipes)

--- a/config/extendedcrafting.cfg
+++ b/config/extendedcrafting.cfg
@@ -265,6 +265,61 @@ singularity {
 	227;overworld;none;630B78
 	228;overworld_alpha;none;630B3A
 	229;overworld_beta;none;630BC2
+	230;prometheum;none;8BB28A
+	231;infuscolium;none;B56CA2
+	232;hepatizon;none;D88ABC
+	233;deep_iron;none;728AAA
+	234;shadow_iron;none;998990
+	235;shadow_steel;none;C0BAB8
+	236;krik;none;83A648
+	237;ignatius;none;DDA248
+	238;inolashite;none;83D4EE
+	239;oureclase;none;D59567
+	240;ceruclase;none;BBDCDD
+	241;haderoth;none;8D8384
+	242;rubracium;none;B83F56
+	243;alduorite;none;989DCA
+	244;lemurite;none;C5C3B2
+	245;midasium;none;DDA137
+	246;angmallen;none;DFCBA1
+	247;carmot;none;C39C69
+	248;astral_silver;none;EA9191
+	249;kalendrite;none;E590FF
+	250;vyroxeres;none;64F241
+	251;amordrine;none;D9BBDF
+	252;meutoite;none;63557B
+	253;orichalcum;none;769D3B
+	254;celenegil;none;98CA98
+	255;vulcanite;none;96352D
+	256;etherium;none;DB2454
+	257;desichalkos;none;9558ED
+	258;atlarus;none;D3B434
+	259;sanguinite;none;DCA036
+	260;eximite;none;AE7CBD
+	261;adamantine;none;F2595C
+	262;lV;none;E8B0E1
+	263;mV;none;F2DF97
+	264;hV;none;ECF6F5
+	265;eV;none;F86D8A
+	266;iV;none;FEE0DE
+	267;luV;none;A2F769
+	268;zPM;none;EB995D
+	269;uV;none;FEB51D
+	270;alloy;none;FEF7F8
+	271;restonia;none;FF3F83
+	272;palis;none;6D56FF
+	273;diamatine;none;C4B0FF
+	274;void;none;5E4D80
+	275;emeradic;none;80FFBA
+	276;enori;none;FFE9FF
+	277;zanite;none;CA71FF
+	278;gravitite;none;D956B0
+	279;alchemical;none;944F25
+	280;amber;none;F59D4C
+	281;aeternalis;none;BBBBBB
+	282;dragonstone;none;E39CD6
+	283;bloodstone;none;7D201C
+	284;runic;none;3B3B3A
      >
 
     # The catalyst required for the default Singularity recipes. modid:itemid:metadata [default: extendedcrafting:material:11]
