Updated the gitignore file
It now ignores the thing I had troubles with just a minute ago

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ config/AppliedEnergistics2/VersionChecker.cfg
 # ReAuth
 .ReAuth.cfg
 
+# ChanceCubes
+config/ChanceCubes/CustomRewards/Resourcepack/CustomSounds-Resourcepack.zip
+
 # CraftTweaker (CT)
 crafttweaker.log
 
