Added xnet and made a couple recipe changes

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -246,6 +246,8 @@ crafting {
     B:mcjty.rftools.blocks.ores.DimensionalShardBlock=true
     B:mcjty.rftools.blocks.teleporter.DestinationAnalyzerBlock=true
     B:mcjty.rftools.blocks.teleporter.MatterBoosterBlock=true
+    B:mcjty.xnet.blocks.redstoneproxy.RedstoneProxyBlock=true
+    B:mcjty.xnet.blocks.redstoneproxy.RedstoneProxyUBlock=true
     B:me.ichun.mods.ichunutil.common.block.BlockCompactPorkchop=true
     B:"mekanism.common.block.BlockBasic$1"=true
     B:mekanism.common.block.BlockOre=true
